plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'hr.ogcs'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	annotationProcessor 'org.projectlombok:lombok'

	compileOnly 'org.projectlombok:lombok'

	implementation 'org.springframework.boot:spring-boot-starter'
	implementation group: 'org.apache.pdfbox', name: 'pdfbox-tools', version: '3.0.1'
	implementation 'org.apache.pdfbox:pdfbox:2.0.24'
	implementation 'org.apache.poi:poi-ooxml:5.2.3'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'software.amazon.awssdk:s3:2.17.102'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
